--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ body {
     left: auto;
     width: 100%;
     height: 80%;
-    background-image: url(../img/banner-desktop.png);
+    background-image: url(../img/banner-desktop.jpg);
     background-size: cover;
     background-position: center;
     opacity: 100;
@@ -126,7 +126,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 2.813rem;
+    font-size: 2.6rem;
     line-height: 1.7rem;
     letter-spacing: 1rem;
     color: #fff;
@@ -136,7 +136,7 @@ body {
 
 .linea1 {
 
-    border: 4.7666px solid #fff;
+    border: 3px solid #fff;
     background-color: #fff;
     width: 20%;
 }
@@ -145,7 +145,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 2.813rem;
+    font-size: 2.6rem;
     line-height: 1.7rem;
     letter-spacing: 1rem;
     color: #000;
@@ -155,7 +155,7 @@ body {
 
 .linea2 {
 
-    border: 4.7666px solid #A6CB5A;
+    border: 3px solid #A6CB5A;
     background-color: #A6CB5A;
     width: 20%;
     
