--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-body {
-    max-width: 100%;
-    margin: 0 auto;
+html, body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
 }
 
 .navlink {
