--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ html, body {
     right: 6%;
     width: 140px;
     height: 140px;
-    background-image: url(../img/boton-subir.png);
+    background-image: url(../img/btn-registration.png);
     background-size: cover;
     background-position: center;
     border: none;
@@ -73,7 +73,7 @@ html, body {
     right: 6%;
     width: 140px;
     height: 140px;
-    background-image: url(../img/boton-subir.png);
+    background-image: url(../img/btn-registration.png);
     background-size: cover;
     background-position: center;
     border: none;
